Introduce Real Time Database and Cloud storage working

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,1 +1,10 @@
-<button mat-button (click)="saveTestDataToDB()">Test</button>
+<!--<input #csvInput hidden="true" type="file" onclick="this.value=null" (change)="saveTestDataToDB($event)" accept=".csv"/>-->
+<!--<button mat-flat-button color="primary" (click)="csvInput.click()">Choose Spreadsheet File (CSV)</button>-->
+<input type="file"
+       id="file"
+       #userPhoto
+       (change)="upload($event)"
+       name="image"
+       autocomplete="off"
+/>
+<router-outlet> </router-outlet>
