--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,10 +1,10 @@
-<!--<input #csvInput hidden="true" type="file" onclick="this.value=null" (change)="saveTestDataToDB($event)" accept=".csv"/>-->
-<!--<button mat-flat-button color="primary" (click)="csvInput.click()">Choose Spreadsheet File (CSV)</button>-->
-<input type="file"
-       id="file"
-       #userPhoto
-       (change)="upload($event)"
-       name="image"
-       autocomplete="off"
-/>
-<router-outlet> </router-outlet>
+<app-header></app-header>
+
+<!--<input type="file"-->
+<!--       id="file"-->
+<!--       #userPhoto-->
+<!--       (change)="upload($event)"-->
+<!--       name="image"-->
+<!--       autocomplete="off"-->
+<!--/>-->
+<!--<router-outlet> </router-outlet>-->
