--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 
+<app-log-in></app-log-in>
+
 <!--<input type="file"-->
 <!--       id="file"-->
 <!--       #userPhoto-->
