--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -20,16 +20,12 @@
         <mat-icon>cloud_upload</mat-icon>
         <span>Upload</span>
       </button>
-      <button mat-button>
+      <button mat-button (click)="openDialog()">
         <mat-icon>person</mat-icon>
         <span>Login</span>
       </button>
 
     </div>
   </mat-sidenav>
-  <mat-sidenav-content>
-    <div class="content mat-elevation-z8">
-      Main content here!
-    </div>
-  </mat-sidenav-content>
+
 </mat-sidenav-container>
