Add upload component

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -16,11 +16,11 @@
       </button>
       <mat-divider></mat-divider>
 
-      <button mat-button>
+      <button mat-button (click)="openUploadDialog()">
         <mat-icon>cloud_upload</mat-icon>
         <span>Upload</span>
       </button>
-      <button mat-button (click)="openDialog()">
+      <button mat-button (click)="openLogInDialog()">
         <mat-icon>person</mat-icon>
         <span>Login</span>
       </button>
