--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -1,10 +1,38 @@
-<h2 mat-dialog-title>This is a Dialog title</h2>
+<h2 class="login-form-title" mat-dialog-title>Login</h2>
 
 <mat-dialog-content>
 
-  <button mat-raised-button (click)="logIn('', '')">Sign in</button>
+  <div *ngIf="loggedIn!==null" class="login-message">
+    <span *ngIf="loggedIn" class="login-success">Logged IN :)</span>
+    <span *ngIf="!loggedIn" class="login-failed">{{loginFailErrorMsg}}</span>
+  </div>
+  <form [formGroup]="loginForm" class="login-form">
+    <mat-form-field appearance="fill" color="primary">
+      <mat-label>Email</mat-label>
+      <input formControlName="email"
+             matInput
+             placeholder="Please enter your mail"
+             required>
+      <mat-error *ngIf="loginForm.controls['email'].invalid">{{getEmailErrorMessage()}}</mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label>Password</mat-label>
+      <input formControlName="password"
+             matInput
+             placeholder="Please enter your password"
+             required>
+      <mat-error *ngIf="loginForm.invalid">{{getPasswordErrorMessage()}}</mat-error>
+    </mat-form-field>
+  </form>
+
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button class="mat-raised-button" (click)="close()">Close</button>
+  <div class="login-form-buttons">
+    <button (click)="close()" mat-raised-button>Close</button>
+    <button (click)="logIn()" [disabled]="isUserDataValid()" class="login-form-login-button" mat-raised-button>Sign in
+    </button>
+  </div>
 </mat-dialog-actions>
+
