--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,9 @@
 html, body {
   height: 100vh;
 }
+html span, body span {
+  letter-spacing: 0.2em;
+}
 
 body {
   margin: 0;
@@ -10,6 +13,15 @@ body {
 mat-toolbar {
   background: #004a9f;
   color: white;
+}
+
+.mat-grid-tile-content {
+  margin-top: 4em !important;
+  align-items: baseline !important;
+}
+
+.footer .mat-form-field-flex {
+  background-color: white !important;
 }
 
 /*# sourceMappingURL=styles.css.map */
