--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -9,15 +9,13 @@
 .navigation-list {
   display: flex;
   flex-flow: column;
-  .mat-button {
-    flex-grow: 1;
-    margin: 1em 4em;
-  }
-
-  .mat-icon {
-    margin-right: 1em;
-  }
-
+}
+.navigation-list .mat-button {
+  flex-grow: 1;
+  margin: 1em 4em;
+}
+.navigation-list .mat-icon {
+  margin-right: 1em;
 }
 
 .content {
@@ -25,11 +23,9 @@
   border-radius: 10px;
   margin: 16px;
   margin-left: 32px;
-
   display: flex;
   justify-content: center;
   align-items: center;
-
   font-size: 2rem;
   color: lightgray;
 }
@@ -38,8 +34,9 @@
   height: calc(100vh - 65px);
 }
 
-
 .mat-button {
   display: flex;
   align-items: center;
 }
+
+/*# sourceMappingURL=navigation.component.css.map */
