--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -28,5 +28,7 @@
 
     </div>
   </mat-sidenav>
+  <mat-sidenav-content><app-image-grid></app-image-grid>
+    <app-footer></app-footer></mat-sidenav-content>
 
 </mat-sidenav-container>
