Change styling of login field

--- a/src/app/image-grid/image-grid.component.html
+++ b/src/app/image-grid/image-grid.component.html
@@ -1,21 +1,21 @@
-<mat-grid-list cols="3" rowHeight="40em">
+<mat-grid-list cols="3" rowHeight="60em">
   <mat-grid-tile>
-    <img src="{{downloadUrl}}">
+    <img src="{{downloadUrl}}" width="80%">
   </mat-grid-tile>
   <mat-grid-tile>
-    <img src="{{downloadUrl}}">
+    <img src="{{downloadUrl}}" width="80%">
   </mat-grid-tile>
   <mat-grid-tile>
-    <img src="{{downloadUrl}}">
+    <img src="{{downloadUrl}}" width="80%">
   </mat-grid-tile>
   <mat-grid-tile>
-    <img src="{{downloadUrl}}" >
+    <img src="{{downloadUrl}}" width="80%">
   </mat-grid-tile>
   <mat-grid-tile>
-    <img src="{{downloadUrl}}" >
+    <img src="{{downloadUrl}}" width="80%">
   </mat-grid-tile>
   <mat-grid-tile>
-    <img src="{{downloadUrl}}" >
+    <img src="{{downloadUrl}}" width="80%">
   </mat-grid-tile>
 
 
