--- a/src/app/image-grid/image-grid.component.html
+++ b/src/app/image-grid/image-grid.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="3" rowHeight="60em">
+<mat-grid-list cols="3" rowHeight="40%">
   <mat-grid-tile>
     <img src="{{downloadUrl}}" width="80%">
   </mat-grid-tile>
