--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -2,6 +2,8 @@
   width: 100%;
   background-color: #646464;
   color: white;
+  bottom: 0;
+  position: fixed;
 
   .footer-title {
     font-size: 1.3em;
