--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -11,6 +11,22 @@
         <mat-icon>photo</mat-icon>
         <span>Albums</span>
       </button>
+
+<!--      <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">-->
+<!--        <mat-tree-node *matTreeNodeDef="let node">-->
+<!--          <button disabled mat-icon-button></button>-->
+<!--          <a href="{{goToSelectedAlbum(node.name)}}">-->
+<!--            <button mat-button><span>{{node.name}}</span></button>-->
+<!--          </a>-->
+<!--        </mat-tree-node>-->
+<!--        <mat-tree-node *matTreeNodeDef="let node;when: hasChild">-->
+<!--          <button [attr.aria-label]="'toggle ' + node.name" mat-icon-button-->
+<!--                  matTreeNodeToggle>-->
+<!--            <span>{{node.name}}</span>-->
+<!--          </button>-->
+<!--        </mat-tree-node>-->
+<!--      </mat-tree>-->
+
       <button mat-button>
         <mat-icon>info</mat-icon>
         <span>About</span>
@@ -30,7 +46,11 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <app-image-grid *ngIf="isHome"></app-image-grid>
-    <app-albums *ngIf="isAlbums" [albums]="albums"></app-albums>
+    <app-albums *ngIf="isAlbums"
+                [albums]="albums"
+                (onAlbumIsSelected)="goToSelectedAlbum($event)">
+    </app-albums>
+    <app-album *ngIf="isAlbum" [albumName]="albumName"></app-album>
     <app-footer></app-footer>
   </mat-sidenav-content>
 
